fixed alignment on subscribe button

--- a/txlege84/static/scss/helpers/_theme.scss
+++ b/txlege84/static/scss/helpers/_theme.scss
@@ -400,7 +400,7 @@ hr.video-divider {
 
   .button {
     @include span-columns(12);
-    margin-bottom: 2em;
+    margin: -.25em 0 2em 0;
     @include media($large) {
       @include span-columns(3);
     }
